--- a/vrs/templates/stafforders.html
+++ b/vrs/templates/stafforders.html
@@ -43,7 +43,7 @@ Cart
                       </tr>
                     </thead>
                     <div  style = " margin: 5px; border-radius: 10px;">
-                      {% for i in "pranaprana" %}
+                      {% for i in "loveaparna" %}
                     </tr>
                     <tr class="fw-normal">
                       <th class="border-0">
