--- a/vrs/templates/staffbase.html
+++ b/vrs/templates/staffbase.html
@@ -25,18 +25,14 @@
             <li class="nav-item active">
               <a class="nav-link" href="/staff/home">Movies <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active" >
-              <a class="nav-link" href="/staff/orders">Orders</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                Orders
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="/staff/orders/all">All</a>
+                <a class="dropdown-item" href="/staff/orders/rented">Rented</a>
+                <a class="dropdown-item" href="/staff/orders/bought">Bought</a>
               </div>
           </ul>
           <form class="form-inline my-2 my-lg-0">
