--- a/vrs/templates/staffhome.html
+++ b/vrs/templates/staffhome.html
@@ -1,6 +1,6 @@
 {% extends "staffbase.html" %}
 {% block title %}
-Cart
+Movies
 {% endblock title %}
 {% block body %}
 
@@ -21,7 +21,7 @@ Cart
           .center_, .mb-0
           {
             text-align: center;
-            font-size: 1.25rem;
+            font-size: 1.75rem;
           }
     </style>
 {% load mathfilters %}
