--- a/vrs/templates/stafforders.html
+++ b/vrs/templates/stafforders.html
@@ -50,10 +50,24 @@ Orders
                     </tr>
                     <tr class="fw-normal">
                       <th class="border-0">
-                        <span class="ms-2 text-white">{{order.id}}</span>
+                        <span class="ms-2 text-white">{{order.order_id}}</span>
                       </th>
-                      <td class="border-0 align-middle">Ask</td>
-                      
+                      <td class="border-0 align-middle">{{order.movie}}</td>
+                      <td class="border-0 align-middle">{{order.user}}</td>
+                      <td class="border-0 align-middle">{{order.order_date}}</td>
+                      <td class="border-0 align-middle">{{order.due_date}}</td>
+                      <td class="border-0 align-middle">
+                        {% if order.status == "Returned" %}
+                        <h6 class="mb-0"><span class="badge bg-success"> {{order.status}}</span></h6>
+                        {% elif order.status == "Not Returned" %}
+                        <h6 class="mb-0"><span class="badge py-1 px-2" style ="background-color: #e8630a"> {{order.status}}</span></h6>
+                        {% elif order.status == "Sold" %}
+                        <h6 class="mb-0"><span class="badge bg-primary"> {{order.status}}</span></h6>
+                        {% else %}
+                        <h6 class="mb-0"><span class="badge py-1 px-2" style ="background-color: #ff0022"> {{order.status}}</span></h6>
+                        {% endif %}
+                      </td>
+
                     </tr>
                     {% endfor %}
                 </div>
