--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -47,8 +47,11 @@
           </ul>
           <form method='get' action='/search' class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search" >
-            <button class="btn btn-outline-success my-2 my-sm-0 mx-2" type="submit">Search</button>
+            <button class="btn btn-outline-success my-2 my-sm-0 mr-3" type="submit"><i class="fas fa-search"></i></button>
           </form>
+          <div>
+            <a href = "/profile"><button type="button" class="btn btn-success mr-2"><i class="fas fa-user"></i> </button></a>
+          </div>
           <div>
             <a class="btn btn-success my-2 my-sm-0" type="submit" href ="/signout" >Log Out</a>
           </div>
