--- a/vrs/templates/signup.html
+++ b/vrs/templates/signup.html
@@ -111,27 +111,27 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" name="name" placeholder="Name">
+						<input type="text" class="form-control" name="name" placeholder="Name" required="">
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-envelope"></i></span>
 						</div>
-						<input type="text" class="form-control" name="email" placeholder="E-mail">
+						<input type="email" class="form-control" name="email" placeholder="E-mail" required="">
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" name="password" placeholder="Password">
+						<input type="password" class="form-control" name="password" placeholder="Password" required="">
 					</div>
                     <div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-phone"></i></span>
 						</div>
-						<input type="phone" class="form-control" name="phone" placeholder="Phone">
+						<input type="phone" class="form-control" name="phone" placeholder="Phone" required="">
 						
 					</div>
 					<div class="form-group">
