--- a/vrs/templates/staffbase.html
+++ b/vrs/templates/staffbase.html
@@ -35,10 +35,13 @@
                 <a class="dropdown-item" href="/staff/orders/bought">Bought</a>
               </div>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
+          {% comment %} <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0 mx-2" type="submit">Search</button>
-          </form>
+          </form> {% endcomment %}
+          <div>
+            <a href = "/staff/profile"><button type="button" class="btn btn-success mr-2"><i class="fas fa-user"></i> </button></a>
+          </div>
           <div>
             <a class="btn btn-success my-2 my-sm-0" type="submit" href ="/signout" >Log Out</a>
           </div>
