--- a/vrs/templates/payment.html
+++ b/vrs/templates/payment.html
@@ -82,9 +82,9 @@
                 <option value="mastercard">Master Card</option>        
             </select>
         </p>
-        <p><label for="card_number">Card Number:*</label><input type="text" name="card_number" id="card_number" required=""></p>
+        <p><label for="card_number">Card Number:*</label><input type="text" pattern="\d{12}" title="Must be a valid Card number" name="card_number" id="card_number" required=""></p>
         <p><label for="exp_date">Expiration Date:*</label><input type="date" name="exp_date" id="exp_date" required=""></p>
-        <p><label for="CVV">CVV:*</label><input type="password" name="CVV" id="CVV" required=""></p>
+        <p><label for="CVV">CVV:*</label><input type="password" pattern="\d{3}" title="Must be a valid CVV number" name="CVV" id="CVV" required=""></p>
         <div>
         <button type="submit" class="btn btn-primary">Pay Now</button>
         </div>
