--- a/vrs/templates/signup.html
+++ b/vrs/templates/signup.html
@@ -125,13 +125,13 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" name="password" placeholder="Password" required="">
+						<input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain atleast one number, one lowercase, one uppercase, and atleast 8 characters" name="password" placeholder="Password" required="">
 					</div>
                     <div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-phone"></i></span>
 						</div>
-						<input type="phone" class="form-control" name="phone" placeholder="Phone" required="">
+						<input type="phone" class="form-control" pattern="[6-9]\d{9}" title="Must be a valid phone number" name="phone" placeholder="Phone" required="">
 						
 					</div>
 					<div class="form-group">
