--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -48,7 +48,7 @@
               </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/contact">Buy</a>
+                <a class="nav-link" href="/orders">Orders</a>
             </li>
           </ul>
           <form method='get' action='/search' class="form-inline my-2 my-lg-0">
