single order page

--- a/vrs/templates/stafforders.html
+++ b/vrs/templates/stafforders.html
@@ -50,7 +50,7 @@ Orders
                     </tr>
                     <tr class="fw-normal">
                       <th class="border-0">
-                        <span class="ms-2 text-white">{{order.order_id}}</span>
+                        <span class="ms-2 text-white"><a href="/staff/order/{{order.order_id}}" style="color:white;">{{order.order_id}}</a></span>
                       </th>
                       <td class="border-0 align-middle">{{order.movie}}</td>
                       <td class="border-0 align-middle">{{order.user}}</td>
