--- a/vrs/templates/movie.html
+++ b/vrs/templates/movie.html
@@ -101,8 +101,8 @@
     <!-- to make buttons to rent and buy movies -->
     <div class="row">
       <div class="col-7 rbuy">
-        <button type="button" class="btn btn-dark disabled">Rent ₹{{movie.rent_price}}</button>
-        <button type="button" class="btn btn-dark disabled">Buy ₹{{movie.buy_price}}</button>
+        <button type="text" class="btn btn-dark disabled">Rent ₹{{movie.rent_price}}</button>
+        <button type="text" class="btn btn-dark disabled">Buy ₹{{movie.buy_price}}</button>
         <a style = "width: 10%;" type="button" class="btn btn-dark btn-lg" href="/add_to_cart/{{movie.id}}" ><i class="fas fa-cart-plus"  style="scale: 1.25;"></i></a>
       </div>
     </div>
