--- a/vrs/templates/staffbase.html
+++ b/vrs/templates/staffbase.html
@@ -22,7 +22,7 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="/staff/home">Movies <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
@@ -34,6 +34,7 @@
                 <a class="dropdown-item" href="/staff/orders/rented">Rented</a>
                 <a class="dropdown-item" href="/staff/orders/bought">Bought</a>
               </div>
+            </li>
           </ul>
           {% comment %} <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
