--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -136,6 +136,8 @@ Home
   }
 </style>
 
+
+{% comment %} All shuffle Movies {% endcomment %}
 <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
 
   <div class="carousel-inner">
@@ -156,6 +158,109 @@ Home
     </div>
 
     {% for i in range2 %}
+    <div class="carousel-item">
+      <div class="card-group">
+        {% for j in i %}
+        <div class="card">
+          <a href="/movie/{{j.id}}">
+          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+        </a>
+          <div class="card-body">
+            <h5 class="card-title">{{j.title}}</h5>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.runtime}}</small></p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    {% endfor %}
+
+  <div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+{% comment %} Bestsellers {% endcomment %}
+<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="card-group">
+        {% for j in popular_range1 %}
+        <div class="card">
+          <a href="/movie/{{j.id}}">
+          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+        </a>
+          <div class="card-body">
+            <h5 class="card-title"> {{j.title}} </h5>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.runtime}}</small></p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+
+    {% for i in popular_range2 %}
+    <div class="carousel-item">
+      <div class="card-group">
+        {% for j in i %}
+        <div class="card">
+          <a href="/movie/{{j.id}}">
+          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+        </a>
+          <div class="card-body">
+            <h5 class="card-title">{{j.title}}</h5>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.runtime}}</small></p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    {% endfor %}
+
+  <div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+
+{% comment %} Latest Arrivals {% endcomment %}
+<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="card-group">
+        {% for j in latest_range1 %}
+        <div class="card">
+          <a href="/movie/{{j.id}}">
+          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+        </a>
+          <div class="card-body">
+            <h5 class="card-title"> {{j.title}} </h5>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.runtime}}</small></p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+
+    {% for i in latest_range2 %}
     <div class="carousel-item">
       <div class="card-group">
         {% for j in i %}
