--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -97,6 +97,7 @@ Home
   .card-group,
   .my {
     padding: 60px;
+    padding-top: 10px;
   }
 
   #movieimage {
@@ -138,6 +139,7 @@ Home
 
 
 {% comment %} All shuffle Movies {% endcomment %}
+<h1 style="padding: 10px 0px 0px 80px; color: white; font-family: math; font-weight: bolder">Bestsellers</h1>
 <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
 
   <div class="carousel-inner">
@@ -188,8 +190,9 @@ Home
 </div>
 
 
-{% comment %} Bestsellers {% endcomment %}
-<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
+{% comment %} Polpular Movies {% endcomment %}
+<h1 style="padding: 10px 0px 0px 80px; color: white; font-family: math; font-weight: bolder">Popular Movies</h1>
+<div id="carouselExampleCaptions1" class="carousel carousel-dark slide" data-bs-ride="false">
 
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -227,11 +230,11 @@ Home
     {% endfor %}
 
   <div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleCaptions1" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleCaptions1" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -241,7 +244,8 @@ Home
 
 
 {% comment %} Latest Arrivals {% endcomment %}
-<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
+<h1 style="padding: 10px 0px 0px 80px; color: white; font-family: math; font-weight: bolder">Latest Arrivals</h1>
+<div id="carouselExampleCaptions2" class="carousel carousel-dark slide" data-bs-ride="false">
 
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -279,14 +283,68 @@ Home
     {% endfor %}
 
   <div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleCaptions2" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleCaptions2" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
 </div>
+
+
+
+{% comment %} Deals of the day Movies {% endcomment %}
+<h1 style="padding: 10px 0px 0px 80px; color: white; font-family: math; font-weight: bolder">Deals of the day</h1>
+<div id="carouselExampleCaptions3" class="carousel carousel-dark slide" data-bs-ride="false">
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="card-group">
+        {% for j in deals_range1 %}
+        <div class="card">
+          <a href="/movie/{{j.id}}">
+          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+        </a>
+          <div class="card-body">
+            <h5 class="card-title"> {{j.title}} </h5>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.runtime}}</small></p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+      
+      {% for i in deals_range2 %}
+    <div class="carousel-item">
+      <div class="card-group">
+        {% for j in i %}
+        <div class="card">
+          <a href="/movie/{{j.id}}">
+          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+        </a>
+          <div class="card-body">
+            <h5 class="card-title">{{j.title}}</h5>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.runtime}}</small></p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    {% endfor %}
+    
+  <div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions3" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions3" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
 {% endblock body %}
