--- a/vrs/templates/orderdisplay.html
+++ b/vrs/templates/orderdisplay.html
@@ -100,7 +100,8 @@ Order
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <p class="text-muted mb-2"> Order ID <span class="fw-bold text-body">{{order.order_id}}</span></p>
-                  <p class="text-muted mb-0"> Place On <span class="fw-bold text-body">{{order.order_date}}</span> </p>
+                  <p class="text-muted mb-1"> Placed On <span class="fw-bold text-body">{{order.order_date}}</span> </p>
+                  <p class="text-muted mb-0"> Placed by <span class="fw-bold text-body">{{order.user}}</span> </p>
                 </div>
               </div>
             </div>
@@ -112,6 +113,7 @@ Order
                   {% if order.status == "Sold" %}
                   <p class="text-muted">SOLD</p>
                   {% else %}
+                  <p class="text-muted">RENTED</p>
                   <p class="text-muted">Due date: <span class="text-body">{{order.due_date}}</span></p>
                   {% endif %}
                 </div>
@@ -121,21 +123,40 @@ Order
                 </div>
               </div>
               <ul class="mx-0 mt-0 mb-0 px-0 pt-0 pb-0">
-                <p class="text-muted">Due date: <span class="text-body">{{order.due_date}}</span></p>
+                <h5>
+                  <form action = "{% url 'stafforderupdate' order.order_id %}" method="POST" >
+                    {% csrf_token %}
+                <div class = "row">  
+                  {% if order.status != "Sold" %}
+                  <div class="col-2 pt-2 pl-3">
+                    <div class="text-muted text-nowrap">Status:</div>
+                  </div>
+                  <div class="col-5 pl-1 ">
+                    {% if order.status == "Not Returned" %}
+                    <select name="status" class="form-control">
+                      <option value="Not Returned">Not Returned</option>
+                      <option value="Returned">Returned</option>
+                    </select>
+                    {% elif order.status == "Returned" %}
+                    <select name="status" class="form-control">
+                      <option value="Returned">Returned</option>
+                      <option value="Not Returned">Not Returned</option>
+                    </select>
+                    {% elif order.status == "Overdue" %}
+                    <select name="status" class="form-control">
+                      <option value="Overdue">Overdue</option>
+                      <option value="Returned">Returned</option>
+                    </select>
+                    {% endif %}
+                  </div>
+                  <div class="col-4 ">
+                    <button type="submit" class="btn btn-success ml-5 text-nowrap"> Update Status</button>
+                  </div>
+                </form> 
+                </h5>
               </ul>
             </div>
-            <div class="card-footer p-4">
-              <div class="d-flex justify-content-between">
-                <h5 class="fw-normal mb-0"><a href="#!">Track</a></h5>
-                <div class="border-start h-100"></div>
-                <h5 class="fw-normal mb-0"><a href="#!">Cancel</a></h5>
-                <div class="border-start h-100"></div>
-                <h5 class="fw-normal mb-0"><a href="#!">Pre-pay</a></h5>
-                <div class="border-start h-100"></div>
-                <h5 class="fw-normal mb-0"><a href="#!" class="text-muted"><i class="fas fa-ellipsis-v"></i></a>
-                </h5>
-              </div>
-            </div>
+            {% endif %}
           </div>
         </div>
       </div>
