--- a/vrs/templates/movie.html
+++ b/vrs/templates/movie.html
@@ -66,6 +66,46 @@
     white-space: nowrap;
   }
 
+  {% comment %} beautifying card {% endcomment %}
+  .card-group 
+  {
+      background-color: black;
+      margin: auto;
+      padding-left: 30px;
+      padding-right: 30px;
+      margin-bottom: 30px;
+  }
+  .card-title 
+  {
+      margin-bottom: 0;
+  }
+  .card-text 
+  {
+      margin-bottom: 0;
+  }
+  .card 
+  {
+      background-color: black;
+      padding: 15px;
+  }
+  .card-body 
+  {
+      height: auto;
+      border-radius: 10px;
+      background-color: white;
+      color: black;
+      padding: 0.8rem;
+      padding-bottom: 0.5rem;
+      padding-top: 0.5rem;
+  }
+  #movieimage 
+  {
+      aspect-ratio: 2/3;
+      border-collapse: separate;
+      border-radius: 10px;
+      margin-bottom: 10px;
+  }
+
 </style>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
@@ -130,4 +170,25 @@
     </div>
   </div>
 </div>
-  {% endblock body %}
+
+{% comment %} Similar Movies {% endcomment %}
+<h1 style="padding: 30px 0px 0px 80px; color: white; font-family: math; font-weight: bolder">Similar Movies</h1>
+{% for i in moviesets %}
+    <div class="card-group" style = "width: {% widthratio i|length 1 25 %}%; padding-left: {% widthratio i|length 3 30 %}px; padding-right: {% widthratio i|length 3 30 %}px;">
+        {% for movie in i %}
+        <div class="card">
+        <a href="/movie/{{movie.id}}">
+            <img id="movieimage" src='/media/{{movie.img}}' class="card-img-top" alt="no image" onerror="this.src='static/noposter.png';">
+        </a>
+        <div class="card-body">
+            <h5 class="card-title">{{movie.title}}</h5>
+            <p class="card-text"><small class="text-muted">{{movie.release_year.year}}</small></p>
+            <p class="card-text">{{movie.desc}}</p>
+            <p class="card-text"><small class="text-muted">{{movie.runtime}}</small></p>
+        </div>
+        </div>
+        {% endfor %}
+        </div>
+    {% endfor %}
+
+{% endblock body %}
