--- a/vrs/templates/cart.html
+++ b/vrs/templates/cart.html
@@ -68,7 +68,7 @@ Cart
                     <div class="row d-flex justify-content-between align-items-center">
                       <div class="col-md-2 col-lg-2 col-xl-2">
                         <img
-                          src="/media/{{items.movie.img}}"
+                          src="{{items.movie.img_url}}"
                           class="img-fluid rounded-3" alt="Cotton T-shirt" style="max-width: 130%; aspect-ratio: 2/3;">
                       </div>
                       <div class="col-md-3 col-lg-3 col-xl-3">
