--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -148,7 +148,7 @@ Home
         {% for j in range1 %}
         <div class="card">
           <a href="/movie/{{j.id}}">
-          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title"> {{j.title}} </h5>
@@ -165,7 +165,7 @@ Home
         {% for j in i %}
         <div class="card">
           <a href="/movie/{{j.id}}">
-          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title">{{j.title}}</h5>
@@ -200,7 +200,7 @@ Home
         {% for j in popular_range1 %}
         <div class="card">
           <a href="/movie/{{j.id}}">
-          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title"> {{j.title}} </h5>
@@ -217,7 +217,7 @@ Home
         {% for j in i %}
         <div class="card">
           <a href="/movie/{{j.id}}">
-          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title">{{j.title}}</h5>
@@ -253,7 +253,7 @@ Home
         {% for j in latest_range1 %}
         <div class="card">
           <a href="/movie/{{j.id}}">
-          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title"> {{j.title}} </h5>
@@ -270,7 +270,7 @@ Home
         {% for j in i %}
         <div class="card">
           <a href="/movie/{{j.id}}">
-          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title">{{j.title}}</h5>
@@ -306,7 +306,7 @@ Home
         {% for j in deals_range1 %}
         <div class="card">
           <a href="/movie/{{j.id}}">
-          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title"> {{j.title}} </h5>
@@ -323,7 +323,7 @@ Home
         {% for j in i %}
         <div class="card">
           <a href="/movie/{{j.id}}">
-          <img src="/media/{{j.img}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
         </a>
           <div class="card-body">
             <h5 class="card-title">{{j.title}}</h5>
