--- a/vrs/templates/orderdisplay.html
+++ b/vrs/templates/orderdisplay.html
@@ -119,7 +119,7 @@ Order
                 </div>
                 <div>
                   <img class="align-self-center img-fluid"
-                    src="/media/{{order.movie.img}}" width="150">
+                    src="{{order.movie.img_url}}" width="150">
                 </div>
               </div>
               <ul class="mx-0 mt-0 mb-0 px-0 pt-0 pb-0">
