--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -4,7 +4,7 @@ Home
 {% endblock title %}
 {% block body %}
 
-<div class="container">
+<div class="container pb-5">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2569">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -15,69 +15,38 @@ Home
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
+        <a href="/movie/{{movie1.id}}">
         <img style="padding: 30px 0px 0px 0px; max-height: 700px; height: 700px;"
-          src="https://i.ytimg.com/vi/mWxjRXR7nWI/maxresdefault.jpg" class="d-block w-100" alt="...">
-        <div class="bottom-left" style="position: absolute;
-            top: 80%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size:500%;
-            color: white;
-            Font-family: 'Comic Sans MS';
-          ">WE THE MEN</div>
-      </div>
-      <div class="carousel-item">
-        <img style="padding: 30px 0px 0px 0px; height: 700px;"
-          src="https://w0.peakpx.com/wallpaper/544/133/HD-wallpaper-tomb-raider-games-movie-action-video-game-video-games-guns-gun-lara-croft-pistols-hot-beauty-female-erica-ocampo-model-black-sexy-adventure-weapons-girl-plain-background-alison.jpg"
-          class="d-block w-100" alt="...">
-        <div class="bottom-left" style="position: absolute;
-            top: 80%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size:500%;
-            color: white;
-            Font-family: 'Comic Sans MS';
-          ">LARA CROFT</div>
-      </div>
-      <div class="carousel-item">
-        <img style="padding: 30px 0px 0px 0px; height: 700px;"
-          src="https://media1.popsugar-assets.com/files/thumbor/MeLoZj0qZccjAfZ5ZCo4mPq-obs=/fit-in/3900x2600/top/filters:format_auto():extract_cover():upscale()/2022/03/03/722/n/46902964/3cecfccbef36e2ba_MCDROON_EC036.jpg"
-          class="d-block w-100" alt="...">
-        <div class="bottom-left" style="position: absolute;
+          src="{{movie1.backdrop_url}}" class="d-block w-100" alt="...">
+        </a>
+        <div class="bottom-left text-nowrap" style="position: absolute;
             top: 80%;
             left: 50%;
             transform: translate(-50%, -50%);
             font-size:400%;
             color: white;
             Font-family: 'Comic Sans MS';
-          ">WOMEN IN US</div>
+          ">{{movie1.title}}</div>
       </div>
+      {% for i in carousels %}
       <div class="carousel-item">
+        <a href="/movie/{{i.id}}">
         <img style="padding: 30px 0px 0px 0px; height: 700px;"
-          src="https://www.teahub.io/photos/full/82-823033_cat-cute-and-animal-image-hd-wallpapers-for.jpg"
+          src="{{i.backdrop_url}}"
           class="d-block w-100" alt="...">
-        <div class="bottom-left" style="position: absolute;
-            top: 80%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size:500%;
-            color: white;
-            Font-family: 'Comic Sans MS';
-          ">CHIPI CHIPI</div>
-      </div>
-      <div class="carousel-item">
-        <img style="padding: 30px 0px 0px 0px; height: 700px;"
-          src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/75EFA1607F7ED1D9B8F2DD2FA9A344FE9470886FEF3BD7D78A5BB72D060D9B58/scale?width=1200&aspectRatio=1.78&format=webp"
-          class="d-block w-100" alt="...">
-        <div class="bottom-left" style="position: absolute;
+        </a>
+        <div class="bottom-left text-nowrap" style="position: absolute;
             top: 80%;
             left: 50%;
             transform: translate(-50%, -50%);
             font-size:400%;
             color: white;
             Font-family: 'Comic Sans MS';
-          "></div>
+          ">{{i.title}}</div>
       </div>
+      {% endfor %}
+      
+      
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
