--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -107,6 +107,59 @@ Home
 </style>
 
 
+{% comment %} Reccomendations {% endcomment %}
+<h1 style="padding: 10px 0px 0px 80px; color: white; font-family: math; font-weight: bolder">Reccomended For You</h1>
+<div id="carouselExampleCaptions0" class="carousel carousel-dark slide" data-bs-ride="false">
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="card-group">
+        {% for j in reccomendations_range1 %}
+        <div class="card">
+          <a href="/movie/{{j.id}}">
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+        </a>
+          <div class="card-body">
+            <h5 class="card-title"> {{j.title}} </h5>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.runtime}}</small></p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+
+    {% for i in reccomendations_range2 %}
+    <div class="carousel-item">
+      <div class="card-group">
+        {% for j in i %}
+        <div class="card">
+          <a href="/movie/{{j.id}}">
+          <img src="{{j.img_url}}" class="card-img-top" id = "movieimage" alt="no image" onerror="this.src='/static/noposter.png';"> 
+        </a>
+          <div class="card-body">
+            <h5 class="card-title">{{j.title}}</h5>
+            <p class="card-text"><small id = "god" class = "text-muted"> {{j.runtime}}</small></p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    {% endfor %}
+
+  <div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions0" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions0" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+
 {% comment %} All shuffle Movies {% endcomment %}
 <h1 style="padding: 10px 0px 0px 80px; color: white; font-family: math; font-weight: bolder">Bestsellers</h1>
 <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
@@ -303,7 +356,7 @@ Home
       </div>
     </div>
     {% endfor %}
-    
+
   <div>
     <a class="carousel-control-prev" href="#carouselExampleCaptions3" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
