--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -64,8 +64,8 @@
         </div>
       </nav>
       {% for message in messages  %}            
-      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-            <strong>Message : </strong> {{ message }}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert" style="text-align:center;">
+            <strong>Notification : </strong> {{ message }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
