--- a/vrs/templates/orders.html
+++ b/vrs/templates/orders.html
@@ -7,7 +7,10 @@ Orders
 <style>
     .god{
       background: linear-gradient(90deg, #141e30 0%, #243b55 100%);
-
+    }
+    a
+    {
+      color:red;
     }
       
       .mask-custom {
@@ -42,14 +45,16 @@ Orders
                     <th scope="col">Order Date</th>
                     <th scope="col">Due Date</th>
                     <th scope="col">Status</th>
-                  </tr>
+                    <th scope="col">Invoice</th>
+                  </th>
+
                 </thead>
                 <div  style = " margin: 5px; border-radius: 10px;">
                   {% comment %} {% for i in "loveaparna" %} {% endcomment %}
                   {% for order in orders %}
                 </tr>
-                <tr class="fw-normal">
-                  <th class="border-0">
+                <tr class="fw-normal ">
+                  <th class="border-0 align-middle">
                     <span class="ms-2 text-black">{{order.order_id}}</span>
                   </th>
                   <td class="border-0 align-middle">{{order.movie}}</td>
@@ -67,8 +72,7 @@ Orders
                     <h6 class="mb-0"><span class="badge py-1 px-2" style ="background-color: #ff0022"> {{order.status}}</span></h6>
                     {% endif %}
                   </td>
-
-                </tr>
+                  <td class="border-0 align-middle pl-4"><a href="/pdf/{{order.invoice_id}}" ><i class="fas fa-file-pdf" style="scale:1.2;"></i></a></td>
                 {% endfor %}
             </div>
               </table>
