--- a/vrs/templates/stafforders.html
+++ b/vrs/templates/stafforders.html
@@ -9,6 +9,10 @@ Orders
           background: linear-gradient(90deg, #141e30 0%, #243b55 100%);
 
         }
+        a
+        {
+          color:lightgrey;
+        }
           
           .mask-custom {
             background: rgba(24, 24, 16, 0.2);
@@ -42,6 +46,8 @@ Orders
                         <th scope="col">Order Date</th>
                         <th scope="col">Due Date</th>
                         <th scope="col">Status</th>
+                        <th scope="col">Invoice</th>
+
                       </tr>
                     </thead>
                     <div  style = " margin: 5px; border-radius: 10px;">
@@ -49,7 +55,7 @@ Orders
                       {% for order in orders %}
                     </tr>
                     <tr class="fw-normal">
-                      <th class="border-0">
+                      <th class="border-0 align-middle">
                         <span class="ms-2 text-white"><a href="/staff/order/{{order.order_id}}" style="color:white;">{{order.order_id}}</a></span>
                       </th>
                       <td class="border-0 align-middle">{{order.movie}}</td>
@@ -67,6 +73,7 @@ Orders
                         <h6 class="mb-0"><span class="badge py-1 px-2" style ="background-color: #ff0022"> {{order.status}}</span></h6>
                         {% endif %}
                       </td>
+                      <td class="border-0 align-middle pl-4"><a href="/pdf/{{order.invoice_id}}" ><i class="fas fa-file-pdf" style="scale:1.2;"></i></a></td>
 
                     </tr>
                     {% endfor %}
