--- a/vrs/templates/temp.html
+++ b/vrs/templates/temp.html
@@ -26,11 +26,11 @@
             background-color: #fff;
             width: 70%;
             margin: 0 auto;
-            margin-top: 5%;
+            margin-top: 50%;
             border-radius: 15px;
         }
         .one {
-            padding: 5%;
+            
         }
         .two
         {
@@ -43,26 +43,31 @@
         {
             margin-bottom: 0;
         }
-        .ok
+        .heading
         {
-            margin-top: 1%;
-            margin-bottom: 1px;
-            margin-left: 100px;
-            font-size: 1.2rem;
-        }
-        .god
-        {
+            border-bottom: 1px solid #333;
+            border-top: 1px solid #333;
+            padding-top: 3px;
             font-weight: bold;
             font-size: 1.2rem;
-            margin-bottom: 1.5%;
         }
-        .four
-        {   
-        }
-        .five
+        .each
         {
-            text-transform: uppercase;
-            font-weight: bold;
+            padding-top: 2px;
+            font-weight: none;
+        }
+        .tax
+        {
+            border-top: 1px solid #333;
+            padding-top: 3px;
+        }
+        .total
+        {
+            border-bottom: 1px solid #333;
+        }
+        .last
+        {
+            padding-top:4px;
         }
     </style>
 </head>
@@ -70,45 +75,71 @@
 
 <body>
     <div class="bill">
+        <h1 class="two">Bill Summary</h1>
+        <h4 class="two">Invoice ID: 16</h4>
+        <h4 class="two">March 31, 2024, 9:13 p.m.</h4>
+
         <div class="one">
-          <h1 class="two">Bill Summary</h1>
+          <table width="300">
+            <thead>
+                <tr>
+            <th align="left" class="heading">Movie</th>
+            <th class="heading">Type</th>
+            <th align="right" class ="heading">Price</th>
+            </tr>
+            </thead>
 
-          <div class="three">
-            <span class="ok" style="font-weight:bold">Movie.................................................................................................................................................................................................</span>
-            <span class ="ok"style="font-weight:bold">Price</span>
-          </div>
-
-          <hr class="ok">
-
+            <tbody>
           
-          <div class="four">
-            <span class="ok">Stree</span>
-            <span class="ok">
+          <tr>
+            <th align="left" class="each">Kites</th>
+            <th class="each">
+                
+                    Rent
+                    
+            </th>
+            <th class="each" align = "right">
               Rs.
-                  450.0
+                  250.0
                   
-            </span>
-          </div>
+            </th>
+        </tr>
           
+          <tr>
+            <th align="left" class="each">Guzaarish</th>
+            <th class="each">
+                
+                    Rent
+                    
+            </th>
+            <th class="each" align = "right">
+              Rs.
+                  500.0
+                  
+            </th>
+        </tr>
+          
+          
+          
+          <tr class="four">
+              <th align="left"class="tax">Total</th>
+                <th style="border-top:1px solid #333;"></th>
+              <th align="right"class="tax">Rs. 850.0</th>
+          </tr>
+          <tr class="four">
+            <th align="left" class="total">Tax (18%)</th>
+            <th style="border-bottom:1px solid #333;"></th>
+            <th align="right" class="total" >Rs. 153.0</th>
+        </tr>
+        </tbody>
 
-          <hr class="ok">
 
-          <div class="four">
-            <div class="god">Total</div>
-            <div class="god">Rs. total_price</div>
-          </div>
-
-          <div class="four">
-            <div class="god">Tax (18%)</div>
-            <div class="god">Rs. god</div>
-          </div>
-
-          <hr class="my-2">
-
-          <div class="four">
-            <h5 class="five">Total price</h5>
-            <h5>Rs.</h5>
-          </div>
+          <tr class="four">
+            <th align="left" class="last">Total price</th>
+            <th>
+            </th>
+            <th align="right" class="last">Rs. 1003.0</th>
+          </tr>
 
         </div>
     </div>
