--- a/vrs/templates/cart.html
+++ b/vrs/templates/cart.html
@@ -149,7 +149,7 @@ Cart
                     </div>
 
                     <div class="d-flex justify-content-between">
-                      <h5 class="text-black font-weight-bold">Tax</h5>
+                      <h5 class="text-black font-weight-bold">Tax (18%)</h5>
                       <h5>₹{{tax}}</h5>
                     </div>
   
