--- a/vrs/templates/payment.html
+++ b/vrs/templates/payment.html
@@ -66,7 +66,7 @@
           </button>
         </div>
     {% endfor %}    
-    <title>Payment</title>
+    <title>Payment | VRS</title>
 </head>
 <body>
     <h1>Payment Portal</h1>
