--- a/vrs/templates/base.html
+++ b/vrs/templates/base.html
@@ -21,7 +21,7 @@
   </style>
   <body class="body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">VRS</a>
+        <a class="navbar-brand" href="/home">VRS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,18 +34,8 @@
             <li class="nav-item">
               <a class="nav-link" href="/about">About Us</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/genre" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Genre
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/action">Action</a>
-                <a class="dropdown-item" href="/comedy">Comedy</a>
-                <a class="dropdown-item" href="/romance">Romance</a>
-                <a class="dropdown-item" href="/drama">Drama</a>
-                <a class="dropdown-item" href="/horror">Horror</a>
-                <a class="dropdown-item" href="/thriller">Thriller</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="/discover/all/0">Discover</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/orders">Orders</a>
