--- a/vrs/templates/home.html
+++ b/vrs/templates/home.html
@@ -17,7 +17,7 @@ Home
       <div class="carousel-item active">
         <a href="/movie/{{movie1.id}}">
         <img style="padding: 30px 0px 0px 0px; max-height: 700px; height: 700px;"
-          src="{{movie1.backdrop_url}}" class="d-block w-100" alt="...">
+          src="{{movie1.backdrop_url}}" class="d-block w-100" alt="no image" onerror="this.src='/static/noposterl.jpg';">
         </a>
         <div class="bottom-left text-nowrap" style="position: absolute;
             top: 80%;
@@ -33,7 +33,7 @@ Home
         <a href="/movie/{{i.id}}">
         <img style="padding: 30px 0px 0px 0px; height: 700px;"
           src="{{i.backdrop_url}}"
-          class="d-block w-100" alt="...">
+          class="d-block w-100" alt="no image" onerror="this.src='/static/noposterl.jpg';">
         </a>
         <div class="bottom-left text-nowrap" style="position: absolute;
             top: 80%;
